--- a/BT_JS_Jquery/CSS/mega_menu.css
+++ b/BT_JS_Jquery/CSS/mega_menu.css
@@ -22,12 +22,15 @@
     color: white;
     font-weight: bold;
     letter-spacing: 1px;
-    padding:22px 70px 22px 70px;
+    padding:20px 70px 22px 70px;
     text-decoration: none;
 }
 .menu ul li:hover{
     background: #e30613;
 }
+.menu ul li:hover .drop_2{
+    border-top: 6px solid #e30613;
+} 
 .menu ul li i{
     position: absolute;
     top: 22px;
@@ -51,7 +54,7 @@
     position: fixed;
     top: 166px;
     left: 216px;
-    width: 1100px;
+    width: 1104px;
     background: seagreen;
     display: none;
 }
