--- a/duyna-project/css/main.css
+++ b/duyna-project/css/main.css
@@ -1,21 +1,100 @@
+@media all and (max-width:420px){
+
+    .cover {
+
+        background: url(https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+    .top-nav {
+        height: 150px;
+        background: 
+                    linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(72,72,72,0.8) 100%),
+                    url(https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .homepage-icon-cont {
+        margin-left: 15px;
+    }
+    .cover p::after {
+        content: "Find homes in United States on Airbnb";
+    }
+
+    .ten {
+        padding: 5% 0% 0% 4%;
+        font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
+        font-weight: 700;
+        color: white;
+        font-size: 1.5em;
+    }
+    h2 {
+        display: none;
+        font-size: 1.4em;
+        font-weight: 800;
+    }
+    .form-container {
+        margin: 0px !important;
+    }
+
+
+    .submit-button{
+        margin-bottom: 0px !important;
+    }
+
+    
+    .footer-container {
+        display: none;
+    }
+
+    .line {
+       display: none;
+    }
+
+    .description {
+        display: none;
+    }
+
+    div.scrollmenu{
+    display: flex;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    }
+}
+
+@media all and (min-width:1024px){ 
+    .cover {
+        padding: 25px;
+        background: url(https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+    div.scrollmenu {
+        overflow: hidden;
+        white-space: nowrap;
+    }
+}
+
+
+
+
 a {
     text-decoration: none;
 }
 a:hover {
     text-decoration: none;
 }
+
 .homepage-icon {
     font-size: 20px;
 }
-.cover {
-    padding: 25px;
-    background: url(https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 715px;
-} 
+
 h2{
     padding: 5% 0% 0% 4%;
     font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
@@ -25,16 +104,15 @@ h2{
 
 .description p{
     padding: 0% 0% 0% 4%;
-    font-size: 18px;
+    font-size: 20px;
     font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
 }
 
+.form-container {
+    margin-bottom: 40px;
+}
 .form{
-    width: 34%;
-    height: 85%;
     background-color: white;
-    border-radius: 4px;
-    margin:  0% 0% 10% 14%;
 }
 
 .content {
@@ -52,9 +130,6 @@ h2{
     height: 50%;
 }
 
-.col-md-6{
-    margin-top: 4%;
-}
 
 .label{
     margin: 0px;
@@ -90,6 +165,7 @@ h2{
     background-color: #df3c47;
     border-radius: 3px;
     border-color: transparent;
+    margin-bottom: 5%;
 }
 
 
@@ -116,13 +192,13 @@ h4 {
 }
 
 .rate{
-    width: 30%;
+    width: 100%;
     margin-right: 50px;
 }
 
 .rate-place img {
-    width: 110%;
-    height: 100%;
+    width: 100%;
+    height: 90%;
     border-radius: 3px;
 }
 
@@ -137,12 +213,13 @@ h4 {
 }
 
 .comment {
-    margin-top: 15px;
+    margin-top: 14px;
     font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.2857142857142858em;
     color: #484848;
+    white-space: initial !important;
 }
 
 .avatar {
@@ -167,6 +244,7 @@ h4 {
 
 .travel {
     margin-top: 48px;
+    border-bottom: 1px solid #EBEBEB;
 }
 
 .travel-inf{
@@ -195,6 +273,7 @@ h4 {
     font-weight: 400;
     line-height: 1.2857142857142858em;
     color: #484848;
+    white-space: initial !important;
 }
 
 .iiii{
@@ -209,8 +288,8 @@ h4 {
     display: flex;
 }
 .book-place{
-    margin-right: 30px;
-    width: 90%;
+    
+    width: 100%;
 }
 
 .place-img {
@@ -237,6 +316,7 @@ h4 {
     font-weight: 700;
     line-height: 1.375em;
     color: #484848;
+    white-space: initial !important;
 }
 
 .book-place-price {
@@ -313,9 +393,7 @@ h4 {
 
 
 .footer-container {
-    margin: 48px auto;
-    width: 70%;
-    display: flex;
+   margin-top: 48px;
 }
 
 .footer-info{
@@ -373,9 +451,9 @@ h5 {
 
 .footer-logo {
     border-top: 1px solid #EBEBEB;
-    margin: 0px auto;
-    width: 70%;
     display: flex;
+    width: 100%;
+    margin-top: 48px;
 }
 
 .footer-logo span {
@@ -383,6 +461,18 @@ h5 {
     margin-bottom: 48px;
 }
 
+.end {
+    font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
+    font-size: 14px !important;
+    font-weight: 600 !important;
+    line-height: 1.2857142857142858em !important;
+    color: #767676 !important;
+    padding-top: 5px;
+    padding-left: 5px;
+}
 .inl {
     display: inline;
 }
+
+
+
