--- a/duyna-project/css/main.css
+++ b/duyna-project/css/main.css
@@ -1,13 +1,4 @@
 @media all and (max-width:420px){
-
-    .cover {
-
-        background: url(https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-    }
     .top-nav {
         height: 150px;
         background: 
@@ -41,7 +32,6 @@
         margin: 0px !important;
     }
 
-
     .submit-button{
         margin-bottom: 0px !important;
     }
@@ -64,7 +54,37 @@
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
     }
+
 }
+
+@media all and (min-width:421px) and (max-width:768px){
+    .cover {
+        padding: 25px;
+        background: url(https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+}
+@media all and (min-width:768px) and (max-width:1024px){
+    .cover {
+        padding: 25px;
+        background: url(https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+    div.scrollmenu {
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
+    .form-container {
+        margin-left: 20px;
+    }
+} 
 
 @media all and (min-width:1024px){ 
     .cover {
@@ -80,8 +100,6 @@
         white-space: nowrap;
     }
 }
-
-
 
 
 a {
@@ -125,7 +143,6 @@ h2{
 }
 
 .where {
-    margin-top: 8%;
     width: 100%;
     height: 50%;
 }
@@ -157,6 +174,9 @@ h2{
    border-radius: 4px;
 }
 
+.input-group {
+    cursor: auto;
+}
 .submit-button{
     cursor: pointer;
     margin-top: 10%;
@@ -473,6 +493,6 @@ h5 {
 .inl {
     display: inline;
 }
-
-
-
+.btn {
+    display:none;
+}
