--- a/duyna-project/css/main.css
+++ b/duyna-project/css/main.css
@@ -65,54 +65,16 @@
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
-        .homepage-icon-cont {
-            margin-left: 15px;
-        }
-        .cover p::after {
-            content: "Find homes in United States on Airbnb";
-        }
-    
-        .ten {
-            padding: 5% 0% 0% 4%;
-            font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
-            font-weight: 700;
-            color: white;
-            font-size: 1.5em;
-        }
-        h2 {
-            display: none;
-            font-size: 1.4em;
-            font-weight: 800;
-        }
-        .form-container {
-            margin: 0px !important;
-        }
-    
-        .submit-button{
-            margin-bottom: 0px !important;
-        }
-    
-        
-        .footer-container {
-            display: none;
-        }
-    
-        .line {
-           display: none;
-        }
-    
-        .description {
-            display: none;
-        }
-    
-        div.scrollmenu{
+    }
+    div.scrollmenu{
         display: flex;
         overflow-x: scroll;
         -webkit-overflow-scrolling: touch;
         }
-    }
+        
 }
-@media all and (min-width:769px) and (max-width:1024px){
+
+@media all and (min-width:768px) and (max-width:1024px){
     .cover {
         padding: 25px;
         background: url(https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
@@ -121,12 +83,15 @@
         background-size: cover;
         width: 100%;
     }
-    div.scrollmenu {
-        white-space: nowrap;
-    }
 
     .form-container {
         margin-left: 20px;
+    }
+    
+    div.scrollmenu {
+        display: flex;
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
     }
 } 
 
@@ -139,10 +104,10 @@
         background-size: cover;
         width: 100%;
     }
-    div.scrollmenu {
+   div.scrollmenu {
         overflow: hidden;
         white-space: nowrap;
-    }
+    } 
 }
 
 
