--- a/baitap bootstrap/css/style.css
+++ b/baitap bootstrap/css/style.css
@@ -14,7 +14,7 @@
 }
 
 * {
-    font-family: "Circular";
+    /* font-family: "Circular"; */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -176,6 +176,7 @@ button[type="submit"] {
     width: 100%;
     padding-top: 24px;
     display: flex;
+    margin-left: 10px;
 }
 
 .img-product img {
@@ -230,6 +231,7 @@ button[type="submit"] {
     padding: 30px 0;
     border-bottom: 1px solid #c8c1c1;
     border-top: 1px solid #c8c1c1;
+    margin-left: 10px;
 }
 
 .title-travel {
@@ -249,6 +251,7 @@ button[type="submit"] {
 .booked {
     width: 100%;
     display: flex;
+    margin-left: 10px;
 }
 
 .title-home {
@@ -259,6 +262,10 @@ button[type="submit"] {
 .booked img {
     max-width: 100%;
     border-radius: 2px;
+}
+
+.rated {
+    display: flex;
 }
 
 .show-all {
