header st engineering

--- a/css/steng.css
+++ b/css/steng.css
@@ -16,7 +16,7 @@ body{
 	padding: 10px 50px;		
 }
 a{
-	font-size: 25px;
+	font-size: 26px;
 	color: white;			
 }
 .child1{
@@ -34,7 +34,7 @@ a{
 	padding: 15px 20px;
 	font-size: 17px;
 	background-color: #e7e7e7;
-	border: 1px solid #636466;	
+	border: 1px solid #c9cacc;	
 	width: 200px;
 
 
