--- a/Solaniwa/CSS/solaniwa.css
+++ b/Solaniwa/CSS/solaniwa.css
@@ -39,7 +39,7 @@ li{
     flex: 20%;
 }
 .banner header .logo img{
-    margin: 20px  0 0 40px;
+    margin: 17px  0 0 40px;
 }
 .banner header nav{
     display: flex;
@@ -107,7 +107,7 @@ li{
 } */
 .banner .nav{
     position: fixed;
-    top: 150px;
+    top: 160px;
     right: 0px;
     width: 40px;
     background: white;
@@ -143,10 +143,17 @@ li{
 }
 .banner .nav a span p{
     margin: 10px 0 0 15px;
+    display: flex;
+    color: #c30d23;
 }
 .banner .nav a:hover span{
     display: block;
     width: 180px;
+}
+.banner .nav a:hover span p{
+    display: block;
+    width: 180px;
+    color: white;
 }
 .banner .logo-center{
     position: absolute;
